--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -77,18 +77,20 @@ services:
                 ipv4_address: 172.21.0.12
 
   sgecore:
-    build: ./sge
+    build: 
+      context: ./sge
+      network: host
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
       - ./sge:/sge
       - ./sge/configuration:/tmp/configuration
       - ./sge/configuration:/etc/gridengine/configuration
       - ./volumes/shared_data:/shared_data
-    environment:
-      RUNUSER_UERNAME: dummy
-      RUNUSER_HOME: ./sge
-      RUNUSER_UID: '1000'
-      RUNUSER_GID: '100'
+        #environment:
+      #RUNUSER_UERNAME: dummy
+        #RUNUSER_HOME: ./sge
+        #RUNUSER_UID: '1000'
+        #RUNUSER_GID: '100'
     container_name: sgecore
     hostname: sgecore
     stdin_open: true
@@ -97,22 +99,22 @@ services:
       - shared
     ports:
       - 6444:6444
-        #restart: always  
 
   front_end:
     container_name: front_end
     hostname: front_end.dockerized_vre_open-vre
-    build: './front_end/'
-    #user: 2001:2001
-    #user: "${UID}:${GID}"
-    environment:
-      fpm.pool.pm.max_requests: 1001
-      fpm.pool.user: www-data
-      fpm.pool.group: www-data
-      RUNUSER_USERNAME: front_end
-      RUNUSER_HOME: ./sge
-      RUNUSER_UID: '2001'
-      RUNUSER_GID: '2001'
+    build: 
+      context: './front_end/'
+      network: host
+
+      #environment:
+      #fpm.pool.pm.max_requests: 1001
+      #fpm.pool.user: www-data
+      #fpm.pool.group: www-data
+      #RUNUSER_USERNAME: front_end
+      #RUNUSER_HOME: ./sge
+      #RUNUSER_UID: '2001'
+      #RUNUSER_GID: '2001'
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
       - ./front_end/act_qmaster:/var/lib/gridengine/default/common/act_qmaster
