--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,9 +21,25 @@ services:
       - ./volumes/mongo_data:/data/db
       - ./mongodb/mongo-init.sh:/docker-entrypoint-initdb.d/mongo-init.sh:ro
     networks:
-            dev:
             open-vre:
                 ipv4_address: 172.21.0.10
+
+  mongo-express:
+    image: mongo-express
+    container_name: mongo-express
+    links:
+      - my-mongodb
+    ports:
+      - 8081:8081
+    environment:
+      ME_CONFIG_MONGODB_ADMINUSERNAME: ${MONGO_INITDB_ROOT_USERNAME}
+      ME_CONFIG_MONGODB_ADMINPASSWORD: ${MONGO_INITDB_ROOT_PASSWORD}
+      ME_CONFIG_MONGODB_SERVER: my-mongodb
+      ME_CONFIG_MONGODB_ENABLE_ADMIN: "true"
+    networks:
+      open-vre:
+        ipv4_address: 172.21.0.11
+
   mongo_seed:
     container_name: mongo_seed
     image: mongo
@@ -35,7 +51,7 @@ services:
       /mongo-seed/import.sh
 
     networks:
-      - dev
+      - open-vre
 
 
   postgres:
@@ -86,11 +102,6 @@ services:
       - ./sge/configuration:/tmp/configuration
       - ./sge/configuration:/etc/gridengine/configuration
       - ./volumes/shared_data:/shared_data
-        #environment:
-      #RUNUSER_UERNAME: dummy
-        #RUNUSER_HOME: ./sge
-        #RUNUSER_UID: '1000'
-        #RUNUSER_GID: '100'
     container_name: sgecore
     hostname: sgecore
     stdin_open: true
@@ -106,15 +117,6 @@ services:
     build: 
       context: './front_end/'
       network: host
-
-      #environment:
-      #fpm.pool.pm.max_requests: 1001
-      #fpm.pool.user: www-data
-      #fpm.pool.group: www-data
-      #RUNUSER_USERNAME: front_end
-      #RUNUSER_HOME: ./sge
-      #RUNUSER_UID: '2001'
-      #RUNUSER_GID: '2001'
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
       - ./front_end/act_qmaster:/var/lib/gridengine/default/common/act_qmaster
@@ -124,12 +126,10 @@ services:
     links:
       - my-mongodb
       - keycloak
-        #  - postgres
     depends_on:
       - sgecore
     ports:
       - "8089:80"
-        # - "6445:6445"
     networks:
               shared:
               open-vre:
@@ -137,11 +137,9 @@ services:
 
 
 networks:
-  dev:
-    driver: bridge
+  open-vre:
     driver_opts:
       com.docker.network.driver.mtu: 1442
-  open-vre:
     ipam:
       config:
             - subnet: 172.21.0.0/24
@@ -156,5 +154,5 @@ volumes:
     driver_opts:
        o: bind
        type: none
-       device: /home/ubuntu/dockerized_vre/volumes/shared_data
+       device: ./volumes/shared_data
 
